# tap-exact

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_exact/: __init__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
