[tool.poetry]
name = "ticketswap-tap-exact"
version = "0.0.1"
description = "`tap-exact` is a Singer tap for Exact, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Tobias Cadee <tobias.cadee@ticketswap.com>"]
keywords = [
    "ELT",
    "Exact",
]
license = "Apache-2.0"
packages = [
    { include = "tap_exact" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.33.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"
cached-property = "~=1" # Remove after Python 3.7 support is dropped
lxml = "^4.9.3"
xmltodict = "^0.13.0"
boto3 = "^1.33.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.33.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
src = ["tap_exact"]
target-version = "py37"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_exact"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-exact = 'tap_exact.tap:TapExact.cli'
