[tool.poetry]
name = "ticketswap-tap-exact"
version = "0.0.1"
description = "`tap-exact` is a Singer tap for Exact, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Tobias Cadee <tobias.cadee@ticketswap.com>"]
keywords = [
    "ELT",
    "Exact",
]
license = "Apache-2.0"
packages = [
    { include = "tap_exact" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
importlib-resources = { version = "==6.1.*", python = "<3.9" }
singer-sdk = { version="~=0.35.0" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"
smart-open = "^6.4.0"
azure-storage-blob = "^12.19.0"
lxml = "^5.1.0"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.35.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[tool.ruff]
src = ["tap_exact"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_exact"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-exact = 'tap_exact.tap:TapExact.cli'